# ProctoDeployBackendGPU

./: .gitignore  CLAUDE.md  SESSION_CONTEXT.md  V2_MIGRATION_PLAN.md  evolution_progress_from_v1_to_v3.md  version3_multi_user_gpu_aws_architecture.md
.claude/: settings.local.json
Proctor-webRTC/: .dockerignore  .gitignore  Dockerfile  analysis.html  client.html  client.js  config.py  facemesh_worker.py  local_runner.py  main.py  monitor.html  pyproject.toml  requirements.txt  server.py
Proctor-webRTC/core/: __init__.py  alert_engine.py  audio_monitor.py  head_tracker.py  liveness.py  metrics.py  object_tracker.py  proctor_coordinator.py  proctor_session.py  risk_engine.py
Proctor-webRTC/detectors/: __init__.py  face_mesh_provider.py  head_pose_detector.py  lip_detector.py  object_detector.py
Proctor-webRTC/settings/: __init__.py  alerts.py  scoring.py
Proctor-webRTC/utils/: __init__.py  alerts.py  draw.py  logging_config.py  proof_writer.py
Versions/: version1_single_user_cpu_architecture.md  version2_multi_user_cpu_webrtc_architecture.md
frontend/: postcss.config.mjs
frontend/lib/: api.ts  (+1 more)
load_test/: benchmark.py  benchmark_20260319_122439.html  benchmark_20260319_122439.json  benchmark_20260320_152209.html  benchmark_20260320_152209.json  benchmark_20260320_163442.html  benchmark_20260320_163442.json  benchmark_20260320_171025.html  benchmark_20260320_171025.json  benchmark_20260320_175025.html  benchmark_20260320_175025.json  benchmark_20260320_175636.html  benchmark_20260320_175636.json  benchmark_20260320_180820.html  benchmark_20260320_180820.json  (+32 more)
(+13 files in other folders)
